# Nala-Destroyer-2019

./: .gitignore  LICENSE  README.md
auvsi2019/: CMakeLists.txt  package.xml
auvsi2019/include/: drone.h  gpsconnection.h  imgreceiver.h  labelmapping.h  lidar.h  mainwindow.h  misi.h  missionwrapper.h  srf.h  tcpconnection.h  thresholdwidget.h
auvsi2019/include/missions/: autodocking.h  autonav.h  circumnav.h  findthepath.h  followtheleader.h  maintainheading.h  raisetheflag.h  returnhome.h  slalom.h  speedchallenge.h
auvsi2019/msg/: MissionAttr.msg  Waypoints.msg
auvsi2019/resource/: img.qrc
auvsi2019/script/: ImgProc.py  KontrolKapal.py  Mision.py
auvsi2019/src/: clickablelabel.cpp  drone.cpp  gpsconnection.cpp  imgreceiver.cpp  labelmapping.cpp  lidar.cpp  main.cpp  mainwindow.cpp  misi.cpp  missionwrapper.cpp  srf.cpp  tcpconnection.cpp  thresholdwidget.cpp
auvsi2019/src/missions/: autodocking.cpp  autonav.cpp  circumnav.cpp  findthepath.cpp  followtheleader.cpp  maintainheading.cpp  raisetheflag.cpp  returnhome.cpp  slalom.cpp  speedchallenge.cpp
auvsi2019/srv/: WaypointSrv.srv
auvsi2019/ui/: MainWindow.ui
object_detection/: CMakeLists.txt  package.xml
object_detection/msg/: BoundingBox.msg  BoundingBoxes.msg  ObjectAttr.msg
object_detection/src/: main.py  model.py  number_classifier.py  utils.py  yolo.py
object_detection/src/model_data/: class.txt
